{{$NEXT}}

0.09_1 2014-06-04
 - first release
 - all functionality (and most of the API) copied from Net::UPS 0.12
 - requires Perl 5.10
 - will work with IO::Async and Net::Async::HTTP, or with plain
   LWP::UserAgent