@@ -125,6 +125,7 @@ Shows the size of the package, and the stack trace.
 {package Net::Async::Webservice::UPS::Exception::HTTPError;
  use Moo;
  extends 'Net::Async::Webservice::UPS::Exception';
+ use Try::Tiny;
 
 =head2 C<Net::Async::Webservice::UPS::Exception::HTTPError>
 
@@ -158,7 +159,7 @@ Mentions the HTTP method, URL, response status line, and stack trace.
 
      return sprintf 'Error %sing %s: %s, at %s',
          $self->request->method,$self->request->uri,
-         $self->response->status_line,
+         (try {$self->response->status_line} catch {'no response'}),
          $self->stack_trace->as_string;
  }
 }
